[gd_scene load_steps=4 format=3 uid="uid://7i2ltxhfe2tn"]

[ext_resource type="Script" uid="uid://bds1g8lmi3f7j" path="res://uis/layer1/home.gd" id="1_blhe6"]
[ext_resource type="Texture2D" uid="uid://dnptx66ptsjwd" path="res://assets/ui_sprites/general/bg.png" id="2_rfhc7"]
[ext_resource type="Texture2D" uid="uid://bils1cprlssch" path="res://assets/ui_sprites/general/title_transparent_bg_1x.png" id="3_i1p0m"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blhe6")

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rfhc7")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -384.0
offset_top = 50.0
offset_right = 384.0
offset_bottom = 562.0
grow_horizontal = 2
texture = ExtResource("3_i1p0m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="StoryBtn" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
theme_type_variation = &"Btn1"
theme_override_font_sizes/font_size = 64
text = "STORY_MODE"

[node name="ExtraBtn" type="Button" parent="VBoxContainer/Buttons"]
visible = false
layout_mode = 2
theme_type_variation = &"Btn1"
theme_override_font_sizes/font_size = 64
text = "EXTRA_GAMES"

[node name="SettingsBtn" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
theme_type_variation = &"Btn1"
theme_override_font_sizes/font_size = 64
text = "SETTINGS"

[node name="QuitBtn" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
theme_type_variation = &"Btn1"
theme_override_font_sizes/font_size = 64
text = "QUIT_GAME"

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[connection signal="pressed" from="VBoxContainer/Buttons/StoryBtn" to="." method="_on_story_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/ExtraBtn" to="." method="_on_extra_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/QuitBtn" to="." method="_on_quit_btn_pressed"]
